Show github profile and small ui refactoring
