# Dailo/Dailo.ClientApp/src/app/modules/user-profile/models/github-user-profile.model.ts
@@ -1,0 +1,10 @@
+export interface GitHubUserProfileModel {
+  id: number;
+  login: string | null;
+  url: string | null;
+  name: string | null;
+  email: string | null;
+  publicRepos: number;
+  followers: number;
+  following: number;
+}
